--- a/ClientApp/src/app/home/home.component.html
+++ b/ClientApp/src/app/home/home.component.html
@@ -6,8 +6,67 @@
         <p>This page can be accessed by <u>all authenticated users</u>.</p>
         <p class="mb-1">Current user from secure api end point:</p>
         <div *ngIf="loading" class="spinner-border spinner-border-sm"></div>
-        <ul *ngIf="userFromApi">
+        <!-- <ul *ngIf="userFromApi">
             <li>{{userFromApi.firstName}} {{userFromApi.lastName}}</li>
-        </ul>
+        </ul> -->
+        <div class="spinner" *ngIf="loadingState; else home">
+            <mat-spinner></mat-spinner>
+            </div>
+            <ng-template class="home" #home>
+              <h2 style="text-align: center;">Contact List</h2>
+              <div class="home-container mat-elevation-z8">
+                <div><button title="Create" mat-raised-button color="accent" (click)="addContact()">Create</button></div>
+                <table mat-table #table [dataSource]="dataSource">
+            
+                  <!-- Id Column -->
+                  <!-- <ng-container matColumnDef="id">
+                  <th mat-header-cell *matHeaderCellDef> Id </th>
+                  <td mat-cell *matCellDef="let element"> {{element.id}} </td>
+                </ng-container> -->
+            
+                  <!-- Name Column -->
+                  <ng-container matColumnDef="name">
+                    <th mat-header-cell *matHeaderCellDef> Name </th>
+                    <td mat-cell *matCellDef="let element"> {{element.name}} </td>
+                  </ng-container>
+            
+                  <!-- Email Column -->
+                  <ng-container matColumnDef="email">
+                    <th mat-header-cell *matHeaderCellDef> Email </th>
+                    <td mat-cell *matCellDef="let element"> {{element.email}} </td>
+                  </ng-container>
+            
+                  <!-- Gender Column -->
+                  <ng-container matColumnDef="gender">
+                    <th mat-header-cell *matHeaderCellDef> Gender </th>
+                    <td mat-cell *matCellDef="let element"> {{getGender(element.gender)}} </td>
+                  </ng-container>
+            
+                  <!-- Birth Column -->
+                  <ng-container matColumnDef="birth">
+                    <th mat-header-cell *matHeaderCellDef> Birthday </th>
+                    <td mat-cell *matCellDef="let element"> {{element.birth | date: 'MM-dd-yyyy' }} </td>
+                  </ng-container>
+          
+                  <!-- Message Column -->
+                  <ng-container matColumnDef="message">
+                    <th mat-header-cell *matHeaderCellDef> Message </th>
+                    <td mat-cell *matCellDef="let element"> {{element.message}} </td>
+                  </ng-container>
+            
+                  <ng-container matColumnDef="action">
+                    <th mat-header-cell *matHeaderCellDef> Action </th>
+                    <td mat-cell *matCellDef="let element">
+                      <button title="Edit" mat-raised-button color="primary" (click)="editContact(element.id)">Edit</button>
+                      <button title="Delete" mat-raised-button color="warn" (click)="deleteContact(element.id)">Delete</button>
+                    </td>
+                  </ng-container>
+            
+                  <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+                  <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+                </table>
+            
+              </div>
+            </ng-template>
     </div>
 </div>
