--- a/ClientApp/src/app/register/register.component.html
+++ b/ClientApp/src/app/register/register.component.html
@@ -8,35 +8,35 @@
         <div class="card-body">
             <form [formGroup]="registerForm" (ngSubmit)="onSubmit()">
                 <div class="form-group">
-                    <label for="username">Логин</label>
+                    <label for="username">Username</label>
                     <input type="text" formControlName="username" class="form-control" [ngClass]="{ 'is-invalid': submitted && f.username.errors }" />
                     <div *ngIf="submitted && f.username.errors" class="invalid-feedback">
                         <div *ngIf="f.username.errors.required">Username is required</div>
                     </div>
                 </div>
                 <div class="form-group">
-                    <label for="password">Пароль</label>
+                    <label for="password">Password</label>
                     <input type="password" formControlName="password" class="form-control" [ngClass]="{ 'is-invalid': submitted && f.password.errors }" />
                     <div *ngIf="submitted && f.password.errors" class="invalid-feedback">
                         <div *ngIf="f.password.errors.required">Password is required</div>
                     </div>
                 </div>
                 <div class="form-group">
-                    <label for="firstname">Имя</label>
+                    <label for="firstname">Firstname</label>
                     <input type="text" formControlName="firstname" class="form-control" [ngClass]="{ 'is-invalid': submitted && f.firstname.errors }" />
                     <div *ngIf="submitted && f.firstname.errors" class="invalid-feedback">
-                        <div *ngIf="f.firstname.errors.required">Имя обязательно</div>
+                        <div *ngIf="f.firstname.errors.required">Firstname required</div>
                     </div>
                 </div>
                 <div class="form-group">
-                    <label for="lastname">Фамилия</label>
+                    <label for="lastname">LastName</label>
                     <input type="text" formControlName="lastname" class="form-control" [ngClass]="{ 'is-invalid': submitted && f.lastname.errors }" />
                     <div *ngIf="submitted && f.lastname.errors" class="invalid-feedback">
-                        <div *ngIf="f.lastname.errors.required">Фамилия обязательна</div>
+                        <div *ngIf="f.lastname.errors.required">Lastname required</div>
                     </div>
                 </div>
                 <div class="form-group">
-                    <label for="middlename">Отчество</label>
+                    <label for="middlename">Midddlename</label>
                     <input type="text" formControlName="middlename" class="form-control" />
                 </div>
                 <button [disabled]="loading" class="btn btn-primary">
