--- a/ClientApp/src/styles.css
+++ b/ClientApp/src/styles.css
@@ -1,6 +1,11 @@
 /* You can add global styles to this file, and also import other style files */
-@import '~@angular/material/prebuilt-themes/deeppurple-amber.css';
-
+@import '~@angular/material/prebuilt-themes/indigo-pink.css';
+table {
+  width: 100%;
+}
+th.mat-sort-header-sorted {
+  color: black;
+}
 /* body { 
   font-family: Roboto, Arial, sans-serif;
   margin: 0;
