--- a/ClientApp/src/app/userform/userform.component.html
+++ b/ClientApp/src/app/userform/userform.component.html
@@ -1,12 +1,19 @@
 <form  (ngSubmit)="onSubmit(userFrm)"  [formGroup]="userFrm">
   <h2 mat-dialog-title>{{data.modalTitle}}</h2>
   
+  <!-- <div mat-dialog-content>
+    <mat-form-field appearance="outline">
+      <mat-label>Id</mat-label>
+      <input matInput placeholder="Id" formControlName="id">
+      <mat-error *ngIf="formErrors.id">
+        {{ formErrors.id }}
+      </mat-error>
+    </mat-form-field>
+  </div> -->
   <div mat-dialog-content>
-      <mat-form-field appearance="outline">
+    <mat-form-field appearance="outline">
       <mat-label>Username</mat-label>
       <input matInput placeholder="Username" formControlName="username">
-      <!-- <mat-icon matSuffix>sentiment_very_satisfied</mat-icon> -->
-      <!-- <mat-hint>Hint</mat-hint> -->
       <mat-error *ngIf="formErrors.username">
         {{ formErrors.username }}
       </mat-error>
@@ -17,7 +24,7 @@
       <mat-label>Firstname</mat-label>
       <input matInput placeholder="Firstname" formControlName="firstname">
       <mat-error *ngIf="formErrors.firstname">
-        {{ formErrors.firstname }}
+        {{ formErrors.username }}
       </mat-error>
     </mat-form-field>
   </div>
@@ -40,19 +47,28 @@
     </mat-form-field>
   </div>
   <div mat-dialog-content>
-    <mat-form-field appearance="outline">
+    <!-- <mat-form-field appearance="outline">
       <mat-label>Role</mat-label>
       <input matInput placeholder="Role" formControlName="role">
       <mat-error *ngIf="formErrors.role">
         {{ formErrors.role }}
       </mat-error>
+    </mat-form-field> -->
+    <mat-form-field>
+      <mat-label>Role</mat-label>
+      <mat-select formControlName="role">
+        <mat-option *ngFor="let role of roles" [value]="role.name">
+          {{role.name}}
+        </mat-option>
+      </mat-select>
+      <mat-error *ngIf="formErrors.role">{{ formErrors.role }}</mat-error>
     </mat-form-field>
   </div>
   <div>
     <div mat-dialog-actions>
-    <button type="button" mat-raised-button color="warn" (click)="dialogRef.close()">Cancel</button>&nbsp;
-    <button type="submit" mat-raised-button color="primary" [disabled]="userFrm.invalid">{{data.modalBtnTitle}}</button>
+      <button type="button" mat-raised-button color="warn" (click)="dialogRef.close()">Cancel</button>&nbsp;
+      <button type="submit" mat-raised-button color="primary" [disabled]="userFrm.invalid">{{data.modalBtnTitle}}</button>
     </div>
   </div>
   
-  </form>
+</form>
