--- a/ClientApp/src/app/admin/admin.component.html
+++ b/ClientApp/src/app/admin/admin.component.html
@@ -42,8 +42,6 @@
           <td mat-cell *matCellDef="let element"> {{element.middlename}} </td>
         </ng-container>
         
-        
-        
         <!-- <ng-container matColumnDef="deleted">
           <th mat-header-cell *matHeaderCellDef mat-sort-header> deleted </th>
           <td mat-cell *matCellDef="let element"> {{element.deleted}} </td>
@@ -65,8 +63,75 @@
         <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
         <tr mat-row *matRowDef="let row; columns: displayedColumns;" (click)="getRecordId(row.id)"></tr>
       </table>
-      <mat-paginator [pageSizeOptions]="[2, 5, 10, 20]" showFirstLastButtons></mat-paginator>
+      <mat-paginator [pageSizeOptions]="[5, 10, 20]" showFirstLastButtons></mat-paginator>
       
+
+      <mat-form-field>
+        <mat-label>Filter</mat-label>
+        <input matInput (keyup)="applyContactFilter($event)" placeholder="Name">
+      </mat-form-field>
+      <table mat-table #table [dataSource]="dataSourceContact" matSort>
+        
+        <!-- Id Column -->
+        <!-- <ng-container matColumnDef="id">
+          <th mat-header-cell *matHeaderCellDef> Id </th>
+          <td mat-cell *matCellDef="let element"> {{element.id}} </td>
+        </ng-container> -->
+        
+        <!-- Name Column -->
+        <ng-container matColumnDef="name">
+          <th mat-header-cell *matHeaderCellDef mat-sort-header> Name </th>
+          <td mat-cell *matCellDef="let element"> {{element.name}} </td>
+        </ng-container>
+        
+        <!-- Email Column -->
+        <ng-container matColumnDef="email">
+          <th mat-header-cell *matHeaderCellDef mat-sort-header> Email </th>
+          <td mat-cell *matCellDef="let element"> {{element.email}} </td>
+        </ng-container>
+        
+        <!-- Gender Column -->
+        <ng-container matColumnDef="gender">
+          <th mat-header-cell *matHeaderCellDef mat-sort-header> Gender </th>
+          <td mat-cell *matCellDef="let element"> {{getGender(element.gender)}} </td>
+        </ng-container>
+        
+        <!-- Birth Column -->
+        <ng-container matColumnDef="birth">
+          <th mat-header-cell *matHeaderCellDef mat-sort-header> Birthday </th>
+          <td mat-cell *matCellDef="let element"> {{element.birth | date: 'MM-dd-yyyy' }} </td>
+        </ng-container>
+        
+        <!-- Message Column -->
+        <ng-container matColumnDef="message">
+          <th mat-header-cell *matHeaderCellDef mat-sort-header> Message </th>
+          <td mat-cell *matCellDef="let element"> {{element.message}} </td>
+        </ng-container>
+        
+        <ng-container matColumnDef="deleted">
+          <th mat-header-cell *matHeaderCellDef mat-sort-header> Deleted </th>
+          <td mat-cell *matCellDef="let element"> {{element.deleted | yesNo}} </td>
+        </ng-container>
+        
+        <!-- <ng-container matColumnDef="user">
+          <th mat-header-cell *matHeaderCellDef mat-sort-header> user </th>
+          <td mat-cell *matCellDef="let element"> {{element.user}} </td>
+        </ng-container> -->
+        
+        <ng-container matColumnDef="action">
+          <th mat-header-cell *matHeaderCellDef> Action </th>
+          <td mat-cell *matCellDef="let element">
+            <button title="Edit" mat-raised-button color="primary" (click)="editContact(element.id)">Edit</button>
+            <button title="Delete" mat-raised-button color="warn" (click)="deleteContact(element.id)">Delete</button>
+          </td>
+        </ng-container>
+        
+        <tr mat-header-row *matHeaderRowDef="displayedContactColumns"></tr>
+        <tr mat-row *matRowDef="let row; columns: displayedContactColumns;"></tr>
+      </table>
+      <mat-paginator [pageSizeOptions]="[5, 10, 20]" showFirstLastButtons></mat-paginator>
+      
+
     </div>
   </div>
 </div>
